PharmaDemo/src/objects/Price_List_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Volume__c</fullName>
        <label>Maximum Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Volume__c</fullName>
        <label>Minimum Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_List_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List SKU</label>
        <referenceTo>Price_List_SKUs__c</referenceTo>
        <relationshipLabel>Price List Rules</relationshipLabel>
        <relationshipName>Price_List_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price List Rule</label>
    <nameField>
        <displayFormat>PLR-{0000}</displayFormat>
        <label>Price List Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>